--- a/package.json
+++ b/package.json
@@ -10,43 +10,44 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.39.7",
-    "@supabase/ssr": "^0.1.0",
     "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.11",
-    "react-hook-form": "^7.50.1",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/resolvers": "^3.3.4",
-    "zod": "^3.22.4",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "@tailwindcss/forms": "^0.5.7",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "lucide-react": "^0.358.0",
-    "date-fns": "^3.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-switch": "^1.0.3",
-    "framer-motion": "^11.0.8"
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "autoprefixer": "^10.4.17",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "dotenv": "^17.2.1",
+    "framer-motion": "^11.0.8",
+    "lucide-react": "^0.358.0",
+    "next": "14.2.5",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.50.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.2.5",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2"
+    "typescript": "^5.3.3"
   }
 }
